# lancaster-local

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  DEV_PROD_SETUP.md  MOBILE_TESTING_CHECKLIST.md  Makefile  README.md  SEED_DATA_README.md  docker-compose.prod.yml  docker-compose.yml  rebuild-and-seed.sh  start-dev.sh
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/migrations/: 20240101000000_initial_schema.sql  20240729000001_fix_timestamps.sql  20250729000000_initial_schema.sql  20250730000000_remove_ticket_price.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/handlers/: admin.rs  events.rs  health.rs  languages.rs  mod.rs  posts.rs
backend/src/models/: mod.rs
backend/src/services/: background.rs  mod.rs  translation.rs
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: EventCard.tsx  Header.tsx  LancasterLogo.tsx  LanguageSelector.tsx  Layout.tsx  MegaphoneIcon.tsx  NewspaperLogo.tsx  PostCard.tsx  PostCardSkeleton.tsx
frontend/src/contexts/: DirectionContext.tsx
frontend/src/hooks/: useAdminAuth.ts  useDirection.tsx  useInfiniteScroll.ts
frontend/src/i18n/: index.ts
frontend/src/pages/: AdminDashboard.tsx  AdminLogin.tsx  Calendar.tsx  NewsFeed.tsx  SubmitEvent.tsx  SubmitPost.tsx
frontend/src/styles/: globals.css  mobile.css
frontend/src/types/: api.ts  i18n.d.ts  index.ts
nginx/: nginx.conf
(+7 files in other folders)
