[package]
name = "lancaster-backend"
version = "0.1.0"
edition = "2021"
default-run = "lancaster-backend"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"


[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
thiserror = "1.0"
anyhow = "1.0"
bcrypt = "0.15"
rand = "0.8"
base64 = "0.21"
lazy_static = "1.4"
regex = "1.10"

[dev-dependencies]
cargo-watch = "8.4"